# BHMI

./: .gitignore  ApplicationTime.cpp  ApplicationTime.h  ApplicationTime.ui  BHMI.cpp  BHMI.h  BHMI.ui  BucketsModel.cpp  BucketsModel.h  CMakeLists.txt  CameraDriver.cpp  CameraDriver.h  DriverSettings.cpp  DriverSettings.h  DriverSettings.ui  NewBucket.cpp  NewBucket.h  NewBucket.ui  PrintFirst.cpp  PrintFirst.h  README.md  SerialHandler.cpp  SerialHandler.h  SerialHandler.ui  Structures.h  main.cpp  specRes.qrc  tmpLambda.h
